Start writing about the SIMD heuristic filter

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -14,6 +14,7 @@
 }
 
 @techreport{GECCO:2021,
+  type = {Preprint},
   title = {Accurate de Novo Identification of Biosynthetic Gene Clusters with {{GECCO}}},
   author = {Carroll, Laura M. and Larralde, Martin and Fleck, Jonas Simon and Ponnudurai, Ruby and Milanese, Alessio and Cappio, Elisa and Zeller, Georg},
   year = {2021},
@@ -49,4 +50,27 @@
   institution = {{Bioinformatics}},
   doi = {10.1101/2021.07.21.453177},
   langid = {english},
+}
+
+@article{AssessORF:2019,
+  title = {{{AssessORF}}: Combining Evolutionary Conservation and Proteomics to Assess Prokaryotic Gene Predictions},
+  shorttitle = {{{AssessORF}}},
+  author = {Korandla, Deepank R and Wozniak, Jacob M and Campeau, Anaamika and Gonzalez, David J and Wright, Erik S},
+  year = {2019},
+  month = sep,
+  journal = {Bioinformatics},
+  volume = {36},
+  number = {4},
+  pages = {1022--1029},
+  issn = {1367-4803},
+  doi = {10.1093/bioinformatics/btz714},
+  pmcid = {PMC7998711},
+  pmid = {31532487},
+}
+
+@misc{Cython,
+  author = {Behnel, Stefan. and Bradshaw, Robert. and Dalcín, Lisandro. and Florisson, Mark. and Makarov, Vitja. and Seljebotn, Dag Sverre, and the Cython contributors.},
+  title = {Cython: {C}-{E}xtensions for {P}ython},
+  year = {2020},
+  url = {https://cython.org}
 }
