--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,52 @@
+@article{Bioconda:2018,
+  title = {Bioconda: Sustainable and Comprehensive Software Distribution for the Life Sciences},
+  shorttitle = {Bioconda},
+  author = {Gr{\"u}ning, Bj{\"o}rn and Dale, Ryan and Sj{\"o}din, Andreas and Chapman, Brad A. and Rowe, Jillian and {Tomkins-Tinch}, Christopher H. and Valieris, Renan and K{\"o}ster, Johannes},
+  year = {2018},
+  month = jul,
+  journal = {Nature Methods},
+  volume = {15},
+  number = {7},
+  pages = {475--476},
+  publisher = {{Nature Publishing Group}},
+  issn = {1548-7105},
+  doi = {10.1038/s41592-018-0046-7},
+  copyright = {2018 The Author(s)},
+  langid = {english},
+  keywords = {Publishing,Software},
+}
+
+@inproceedings{Valgrind:2007,
+  author = {Nethercote, Nicholas and Seward, Julian},
+  title = {Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation},
+  year = {2007},
+  isbn = {9781595936332},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/1250734.1250746},
+  doi = {10.1145/1250734.1250746},
+  booktitle = {Proceedings of the 28th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages = {89–100},
+  numpages = {12},
+  keywords = {dynamic binary instrumentation, Memcheck, shadow values, Valgrind, dynamic binary analysis},
+  location = {San Diego, California, USA},
+  series = {PLDI '07}
+}
+
+@article{proGenomes2:2020,
+  title = {{{proGenomes2}}: An Improved Database for Accurate and Consistent Habitat, Taxonomic and Functional Annotations of Prokaryotic Genomes},
+  shorttitle = {{{proGenomes2}}},
+  author = {Mende, Daniel R and Letunic, Ivica and Maistrenko, Oleksandr M and Schmidt, Thomas S B and Milanese, Alessio and Paoli, Lucas and {Hern{\'a}ndez-Plaza}, Ana and Orakov, Askarbek N and Forslund, Sofia K and Sunagawa, Shinichi and Zeller, Georg and {Huerta-Cepas}, Jaime and Coelho, Luis Pedro and Bork, Peer},
+  year = {2020},
+  month = jan,
+  journal = {Nucleic Acids Research},
+  volume = {48},
+  number = {D1},
+  pages = {D621-D625},
+  issn = {0305-1048},
+  doi = {10.1093/nar/gkz1002},
+}
+
 @article{Prodigal:2010,
   title = {Prodigal: Prokaryotic Gene Recognition and Translation Initiation Site Identification},
   shorttitle = {Prodigal},
@@ -68,9 +117,16 @@
   pmid = {31532487},
 }
 
-@misc{Cython,
+@software{Cython,
   author = {Behnel, Stefan. and Bradshaw, Robert. and Dalcín, Lisandro. and Florisson, Mark. and Makarov, Vitja. and Seljebotn, Dag Sverre, and the Cython contributors.},
   title = {Cython: {C}-{E}xtensions for {P}ython},
   year = {2020},
   url = {https://cython.org}
+}
+
+@software{AlphaMine:2021,
+  author = {Hernández, Joel R. and Guirado, Isaac C. and Sánchez, Marc B. and Verdaguer, Francesc C. and the iGem 2021 ARIA team.},
+  title = {AlphaMine: An alignment-free genomic analysis system that can build core, shell, and cloud prokaryotic pangenomes by applying set-theory operations to genome collections.},
+  year = {2021},
+  url = {https://2021.igem.org/Team:UPF_Barcelona/Software_AMine},
 }
