Reword some parts of the paper and fix display of equations

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -118,14 +118,14 @@
 }
 
 @software{Cython,
-  author = {Behnel, Stefan. and Bradshaw, Robert. and Dalcín, Lisandro. and Florisson, Mark. and Makarov, Vitja. and Seljebotn, Dag Sverre, and the Cython contributors.},
+  author = {Behnel, Stefan. and Bradshaw, Robert. and Dalcín, Lisandro. and Florisson, Mark. and Makarov, Vitja. and Seljebotn, Dag Sverre, and {the Cython contributors}.},
   title = {Cython: {C}-{E}xtensions for {P}ython},
   year = {2020},
   url = {https://cython.org}
 }
 
 @software{AlphaMine:2021,
-  author = {Hernández, Joel R. and Guirado, Isaac C. and Sánchez, Marc B. and Verdaguer, Francesc C. and the iGem 2021 ARIA team.},
+  author = {Hernández, Joel R. and Guirado, Isaac C. and Sánchez, Marc B. and Verdaguer, Francesc C. and {the iGem 2021 ARIA team}.},
   title = {AlphaMine: An alignment-free genomic analysis system that can build core, shell, and cloud prokaryotic pangenomes by applying set-theory operations to genome collections.},
   year = {2021},
   url = {https://2021.igem.org/Team:UPF_Barcelona/Software_AMine},
